fix: remove scrollbars

--- a/src/common/component/styles.module.scss
+++ b/src/common/component/styles.module.scss
@@ -25,6 +25,6 @@
   max-height: 667px;
   height: 100%;
   width: 100%;
-  overflow-y: auto;
+  overflow: hidden;
   position: relative;
 }
